Fixed now block on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -491,7 +491,7 @@ footer a:hover {
 }
 
 .now-playing-block img,  .now-reading-block img {
-	height: 132px;
+	height: 116px;
 }
 
 .now-playing-block a, .now-reading-block a {
